testsuite/tests/typecheck/should_fail/tcfail094.stderr

tcfail094.hs:7:14: parse error on input `1'
